# ohkami

./: .gitignore  Cargo.toml  LICENSE  MEMO.md  README.md  Taskfile.yaml  design.md  rustc-ice-2025-05-23T09_23_44-3083387.txt  rustc-ice-2025-05-23T09_23_44-3083388.txt  rustc-ice-2025-05-23T09_23_46-3083548.txt  rustc-ice-2025-05-23T09_23_46-3083549.txt
benches/: .gitignore  Cargo.toml  hash.rs.tmp
benches/benches/: atoi.rs  content.rs  imf_fixdate.rs  itoa.rs  request_headers.rs  response_headers.rs  tuplemap_vs_hashmap.rs
benches/src/: fxmap.rs  header_hashbrown.rs  header_map.rs  lib.rs  light_ohkami.rs  request_headers.rs  response_headers.rs
benches/src/request_headers/: fxmap.rs  headerhashmap.rs  heap_ohkami_headers.rs
benches/src/response_headers/: fxmap.rs  heap_ohkami_headers.rs  heap_ohkami_headers_nosize.rs
benches_glommio/: Cargo.toml
benches_rt/async-std/: Cargo.toml
benches_rt/compio/: Cargo.toml
benches_rt/glommio/: Cargo.toml
benches_rt/monoio/: Cargo.toml
benches_rt/smol/: Cargo.toml
benches_rt/tokio/: Cargo.toml
benches_smol/: Cargo.toml
benches_vs_actix-web/: Cargo.toml
examples/: Cargo.toml  async.rs  cors.rs  db.rs  hello.rs  login.rs  rustc-ice-2024-01-14T13_44_12-1638909.txt  rustc-ice-2024-01-14T13_44_12-1638912.txt  rustc-ice-2024-01-14T13_44_18-1638947.txt  rustc-ice-2024-01-14T13_44_18-1638948.txt  rustc-ice-2024-01-14T13_44_21-1638980.txt  rustc-ice-2024-01-14T13_44_21-1638981.txt  test.sh
examples/basic_auth/: Cargo.toml
examples/basic_auth/src/: main.rs
examples/chatgpt/: Cargo.toml
examples/chatgpt/src/: error.rs  fangs.rs  main.rs  models.rs
examples/db/: Cargo.toml  Dockerfile  docker-compose.yml
examples/db/rust/: Cargo.toml
examples/deno_react/front/: vite.config.mts
examples/deno_react/server/: Cargo.toml  data.json
examples/derive_from_request/: Cargo.toml
examples/derive_from_request/src/: main.rs
examples/file_load/: README.md
examples/form/: Cargo.toml  form.html
examples/form/src/: main.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/html_layout/src/: main.rs
examples/json_response/: Cargo.toml
examples/json_response/src/: main.rs
examples/jwt/: .env.sample  Cargo.toml
examples/jwt/src/: main.rs
examples/multiple-single-threads/: Cargo.toml
examples/multiple-single-threads/src/: main.rs
examples/openai/: Cargo.toml
examples/openai/src/: error.rs  fangs.rs  main.rs  models.rs
examples/openapi/: .gitignore  Cargo.toml  README.md  openapi.json
examples/openapi/client/: openapi.d.ts  package.json
examples/openapi/src/: main.rs
examples/quick_start/: Cargo.toml
examples/quick_start/src/: main.rs
examples/react_todo/: Cargo.toml  Makefile.toml  README.md
examples/react_todo/migrations/: 20221226122253_init.sql
examples/react_todo/src/: handlers.rs  main.rs  models.rs
examples/realworld/: .env  Cargo.toml  docker-compose.yml  schema.sql
examples/realworld/migrations/: 20240108163944_create_tables.up.sql  20240108165911_add_password_of_users.up.sql  20240114131044_add_unique_on_users_name.up.sql  20240114131044_add_unique_on_users_name_email.up.sql  20240116075152_split_article_author_to_intermediate_table.up.sql  20240129134129_add_times_of_comments.up.sql  20240129135656_change_comment_id_to_serial.up.sql  20240129141912_article_slug_unqiue.up.sql  20240131124617_add_salt_of_users.up.sql
examples/realworld/src/: _test.rs  config.rs  db.rs  errors.rs  fangs.rs  handler.rs  handlers.rs  main.rs  models.rs  repositories.rs  test.rs
examples/simple/: Cargo.toml
examples/sse/: Cargo.toml
examples/sse/src/: main.rs
examples/static_file/: Cargo.toml
examples/static_file/src/: main.rs
examples/static_files/: Cargo.toml
examples/static_files/public/: .env.sample  about.html  index.html  index.js  sub.js  sub.js.br
examples/static_files/src/: main.rs
examples/techempower/: Cargo.toml
examples/techempower/src/: components.rs  main.rs
examples/uibeam/: Cargo.toml
examples/uibeam/src/: main.rs
examples/use_middleware/: Cargo.toml
examples/use_middleware/src/: main.rs
examples/websocket/: Cargo.toml  README.md
examples/websocket/src/: main.rs
examples/websocket/template/: index.html  main.js
examples/with_test/src/: main.rs
ohkami/: Cargo.toml
ohkami/examples/: derive_json.rs  hello.rs  json_macro.rs  payload.rs  query.rs  set_server.rs
ohkami/examples/db/: Dockerfile  docker-compose.yml
ohkami/examples/react_todo/: .env  docker-compose.yml
ohkami/examples/simple/: Cargo.toml
ohkami/examples/with_test/: Cargo.toml
ohkami/src/: components.rs  config.rs  context.rs  error.rs  handler.rs  lib.rs  ohkami.rs  response.rs  result.rs  router.rs  server.rs  util.rs  x_lambda.rs  x_worker.rs
ohkami/src/builtin/: fang.rs  mod.rs  payload.rs
ohkami/src/sse/: mod.rs
ohkami_driver/: Cargo.toml
ohkami_driver/src/: driver.rs  lib.rs  send.rs
ohkami_lib/: Cargo.toml
ohkami_lib/examples/: global.rs
ohkami_lib/src/: base64.rs  f.rs  global.rs  lib.rs  list.rs  map.rs  mime.rs  num.rs  percent_encoding.rs  serde_cookie.rs  serde_multipart.rs  serde_urlencoded.rs  serde_utf8.rs  serde_utf8_test.rs  signal.rs  slice.rs  stream.rs  time.rs
ohkami_macros/: Cargo.toml
ohkami_macros/examples/: json.rs  json_str.rs  json_user.rs
ohkami_macros/src/: components.rs  from_request.rs  internals.rs  lib.rs  openapi.rs  payload.rs  queries.rs  query.rs  response.rs  serde.rs  util.rs  worker.rs
ohkami_openapi/: Cargo.toml
ohkami_openapi/src/: _test.rs  _util.rs  document.rs  lib.rs  paths.rs  request.rs  response.rs  schema.rs  security.rs
samples/issue_550_glommio/: Cargo.toml  README.md
samples/petstore/: .gitignore  Cargo.toml  README.md  openapi.json.sample
samples/readme-openapi/: Cargo.toml  openapi.json.sample
samples/realworld/: Cargo.toml  README.md
samples/worker-bindings/: Cargo.toml  dummy_env_test.js  wrangler.toml
samples/worker-durable-websocket/: Cargo.toml  package.json  wrangler.toml
samples/worker-with-global-bindings/: Cargo.toml  openapi.json  package.json  wrangler.toml
(+559 files in other folders)
