[workspace]
resolver = "2"
members  = [
    "ohkami",
    "ohkami_lib",
    "ohkami_macros",
    "ohkami_openapi",
]
exclude  = [
    "benches",
    "benches_rt/glommio",
    "benches_rt/nio",
    "benches_rt/smol",
    "benches_rt/tokio",
    "benches_rt/vs_actix-web",
]

[workspace.dependencies]
byte_reader = { version = "3.1", features = ["text"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
