[workspace]
resolver = "3"
members  = [
    "ohkami",
    "ohkami_lib",
    "ohkami_macros",
    "ohkami_openapi",
]
exclude  = [
    "samples",
    "benches",
    "benches_rt/async-std",
    "benches_rt/glommio",
    "benches_rt/nio",
    "benches_rt/smol",
    "benches_rt/tokio",
    "benches_rt/vs_actix-web",
]

[workspace.package]
version    = "0.24.0"
edition    = "2024"
authors    = ["kanarus <kanarus786@gmail.com>"]
homepage   = "https://crates.io/crates/ohkami"
repository = "https://github.com/ohkami-rs/ohkami"
readme     = "README.md"
keywords   = ["async", "http", "web", "server", "framework"]
categories = ["asynchronous", "web-programming::http-server", "network-programming", "wasm"]
license    = "MIT"

[workspace.dependencies]
byte_reader = { version = "3.1", features = ["text"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
