[workspace]
resolver = "3"
members  = [
    "ohkami",
    "ohkami_lib",
    "ohkami_macros",
    "ohkami_openapi",
]
exclude  = [
    "samples",
    "benches",
    "benches_rt",
]

[workspace.package]
version    = "0.24.4"
edition    = "2024"
authors    = ["kanarus <mail@kanarus.dev>"]
homepage   = "https://crates.io/crates/ohkami"
repository = "https://github.com/ohkami-rs/ohkami"
readme     = "README.md"
keywords   = ["async", "http", "web", "server", "framework"]
categories = ["asynchronous", "web-programming::http-server", "network-programming", "wasm"]
license    = "MIT"

[workspace.dependencies]
byte_reader = { version = "3.1", features = ["text"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }

[workspace.lints.clippy]
useless_format        = "allow"
duplicated_attributes = "allow"
