[package]
name    = "ohkami_benches"
version = "0.0.0"
edition = "2024"
authors = ["kanarus <kanarus786@gmail.com>"]

[features]
DEBUG = ["ohkami/DEBUG"]
# `--no-default-features` when running `bin/`
default = ["DEBUG"]

[dependencies]
ohkami             = { path = "../ohkami", default-features = false, features = ["rt_tokio"] }
ohkami_lib         = { path = "../ohkami_lib" }
http               = "1.0.0"
rustc-hash         = "1.1"
bytes              = "1.5.0"
byte_reader        = "3.0.0"

tokio              = { version = "1.37.0", features = ["full"] }
tracing            = "0.1.4"
tracing-subscriber = "0.3.18"
hashbrown          = { version = "0.14.5", features = ["raw", "inline-more"] }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"