[workspace]
resolver = "2"
members  = [
    "form",
    "hello",
    "realworld",
    "quick_start",
    "static_files",
    "json_response",
    "derive_from_request",
]

[workspace.dependencies]
# To assure "DEBUG" feature be off even if DEBUGing `../ohkami`,
# explicitly set `default-features = false`
ohkami             = { version = "0.18", path = "../ohkami", default-features = false, features = ["rt_tokio", "testing"] }
tokio              = { version = "1", features = ["full"] }
sqlx               = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
chrono             = "0.4"
