[workspace]
resolver = "2"
members  = [
    "sse",
    "form",
    "hello",
    "openai",
    "websocket",
    "realworld",
    "basic_auth",
    "quick_start",
    "static_files",
    "json_response",
    "derive_from_request",
]

[workspace.dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami             = { path = "../ohkami", default-features = false, features = ["rt_tokio", "sse", "ws"] }
tokio              = { version = "1", features = ["full"] }
sqlx               = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
chrono             = "0.4"