[workspace]
resolver = "2"
members  = ["*"]
exclude  = ["target"]

[workspace.dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami             = { path = "../ohkami", default-features = false, features = ["rt_tokio", "sse", "ws"] }
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
