[package]
name          = "ohkami"
description   = "Build web app in intuitive and declarative code"
documentation = "https://docs.rs/ohkami"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
license       = { workspace = true }

[package.metadata.docs.rs]
features      = ["rt_tokio", "nightly", "sse", "ws"]


[dependencies]
# workspace members
ohkami_lib     = { version = "=0.23.5", path = "../ohkami_lib" }
ohkami_macros  = { version = "=0.23.5", path = "../ohkami_macros" }
ohkami_openapi = { optional = true, version = "=0.23.5", path = "../ohkami_openapi" }

# workspace dependencies
byte_reader = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

# runtimes
tokio          = { version = "1",    optional = true }
async-std      = { version = "1",    optional = true }
smol           = { version = "2",    optional = true }
nio            = { version = "0.0",  optional = true }
glommio        = { version = "0.9",  optional = true }
worker         = { version = "0.5",  optional = true }
lambda_runtime = { version = "0.13", optional = true }

# encoding / crypto
base64 = { version = "0.22" }
hmac   = { version = "0.12", default-features = false }
sha2   = { version = "0.10", default-features = false }

# optional
ctrlc        = { version = "3.4",  optional = true }
num_cpus     = { version = "1.16", optional = true }
futures-util = { version = "0.3",  optional = true, default-features = false }
mews         = { version = "0.2",  optional = true }


[features]
rt_tokio = ["__rt_native__",
    "dep:tokio","tokio/rt","tokio/net","tokio/time",
    "tokio/io-util",
    "mews?/rt_tokio",
]
rt_async-std = ["__rt_native__",
    "dep:async-std",
    "dep:futures-util","futures-util/io",
    "mews?/rt_async-std",
]
rt_smol = ["__rt_native__",
    "dep:smol",
    "dep:futures-util","futures-util/io",
    "mews?/rt_smol",
]
rt_nio = ["__rt_native__",
    "dep:nio",
    "dep:tokio","tokio/io-util",
    "mews?/rt_nio",
]
rt_glommio = ["__rt_native__",
    "dep:glommio",
    "dep:futures-util","futures-util/io",
    "mews?/rt_glommio",
    "dep:num_cpus",
]
rt_worker = ["__rt__",
    "dep:worker", "worker/d1", "worker/queue",
    "ohkami_macros/worker",
]
rt_lambda = ["__rt__",
    "dep:lambda_runtime",
    "dep:tokio", "tokio/rt", # lambda_runtime internally depends on tokio runtime
    "ohkami_lib/stream",     # lambda_runtime's interface always requires stream
]
nightly = []
openapi = ["dep:ohkami_openapi", "ohkami_macros/openapi"]
sse     = ["ohkami_lib/stream"]
ws      = ["ohkami_lib/stream", "dep:mews"]

##### internal #####
__rt__        = []
__rt_native__ = ["__rt__", "dep:ctrlc"]

##### DEBUG #####
DEBUG = ["tokio?/rt-multi-thread", "tokio?/macros"]
#default = [
#    "nightly",
#    "openapi",
#    "sse",
#    "ws",
#    "rt_tokio",
#    #"rt_async-std",
#    #"rt_smol",
#    #"rt_nio",
#    #"rt_glommio",
#    #"rt_worker",
#    "DEBUG",
#]


[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }