[package]
name          = "ohkami_lib"
version       = "0.2.5"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
description   = "Internal library for Ohkami - intuitive and declarative web framework"
documentation = "https://docs.rs/ohkami"
homepage      = "https://crates.io/crates/ohkami"
repository    = "https://github.com/ohkami-rs/ohkami"
readme        = "../README.md"
keywords      = ["async", "http", "web", "server", "framework"]
categories    = ["asynchronous", "web-programming::http-server", "network-programming", "wasm"]
license       = "MIT"

[dependencies]
serde            = { workspace = true }
byte_reader      = { workspace = true }
percent-encoding = { version = "2.3" }
futures-core     = { optional = true, version = "0.3" }
tokio            = { optional = true, version = "1", features = ["sync", "signal"] }

[features]
stream = ["dep:futures-core"]
signal = ["dep:tokio"]

### DEBUG ###
#default = ["stream"]