[lib]
proc-macro = true

[package]
name          = "ohkami_macros"
version       = "0.21.0"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
description   = "Proc macros for Ohkami - intuitive and declarative web framework"
documentation = "https://docs.rs/ohkami"
homepage      = "https://crates.io/crates/ohkami"
repository    = "https://github.com/ohkami-rs/ohkami"
keywords      = ["async", "http", "web", "server", "framework"]
categories    = ["rust-patterns", "asynchronous", "web-programming::http-server", "network-programming", "wasm"]
license       = "MIT"
readme        = "../README.md"

[dependencies]
proc-macro2   = "1.0"
quote         = "1.0"
syn           = { version = "1.0", features = ["full"] }
toml          = { optional = true, version = "0.8.12", features = ["parse"], default-features = false }

[features]
worker = ["dep:toml"]

##### DEBUG #####
#DEBUG   = ["worker"]
#default = ["DEBUG"]