[lib]
proc-macro = true

[package]
name          = "ohkami_macros"
description   = "proc macros for Ohkami - A performant, declarative, and runtime-flexible web framework for Rust"
documentation = "https://docs.rs/ohkami_macros"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
license       = { workspace = true }

[package.metadata.docs.rs]
features      = ["worker", "openapi"]

[lints]
workspace = true

[dependencies]
proc-macro2  = "1.0"
quote        = "1.0"
syn          = { version = "2.0", features = ["full"] }
toml         = { optional = true, version = "0.9",  features = ["serde", "parse"], default-features = false }
jsonc-parser = { optional = true, version = "0.29", features = ["serde"] }
serde        = { optional = true, workspace = true }
serde_json   = { optional = true, workspace = true }

[features]
worker  = ["dep:toml", "dep:jsonc-parser", "dep:serde", "dep:serde_json"]
openapi = []

##### DEBUG #####
#default = ["worker", "openapi"]