[package]
name          = "ohkami_openapi"
description   = "OpenAPI types for Ohkami - intuitive and declarative web framework"
documentation = "https://docs.rs/ohkami_openapi"
version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
readme        = { workspace = true }
keywords      = { workspace = true }
categories    = { workspace = true }
license       = { workspace = true }

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

# for built-in utility impl of `Schema` trait
uuid = { version = "1.17" }

[features]
no-release-serialize = []