[package]
name    = "ohkami_benches-with-glommio"
version = "0.0.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]

[dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami  = { path = "../../ohkami", default-features = false, features = ["rt_glommio"] }
glommio = { version = "0.9" }

[profile.release]
lto           = true
panic         = "abort"
codegen-units = 1

[features]
DEBUG = ["ohkami/DEBUG"]