[package]
name    = "ohkami_benches-with-monoio"
version = "0.0.0"
edition = "2024"
authors = ["kanarus <kanarus786@gmail.com>"]

[dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami  = { path = "../../ohkami", default-features = false, features = ["rt_monoio"] }
monoio  = { version = "0.2" }

[features]
DEBUG = ["ohkami/DEBUG"]
