[package]
name    = "ohkami_benches-with-tokio"
version = "0.0.0"
edition = "2024"
authors = ["kanarus <kanarus786@gmail.com>"]

[dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami  = { path = "../../ohkami", default-features = false, features = ["rt_tokio"] }
tokio   = { version = "1", features = ["full"] }

[features]
DEBUG = ["ohkami/DEBUG"]