[package]
name               = "hello"
version            = "0.1.0"
edition            = "2021"

[dependencies]
ohkami             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
nightly = ["ohkami/nightly"]