[package]
name       = "hello"
version    = "0.1.0"
edition    = "2024"

[dependencies]
ohkami             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
nightly = ["ohkami/nightly"]
DEBUG   = ["ohkami/DEBUG"]