[package]
name = "react_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
ohkami = { git = "https://github.com/kana-rus/ohkami" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.16"
validator = { version = "0.16", features = ["derive"] }