[package]
name               = "realworld"
version            = "0.1.0"
edition            = "2021"

[dependencies]
ohkami             = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }