[package]
name               = "realworld"
version            = "0.1.0"
edition            = "2021"

[dependencies]
ohkami             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
dotenvy            = "0.15.7"
argon2             = "0.5.2"
uuid               = { version = "1.6.1", features = ["serde", "v4"] }