[package]
name    = "issue_550_glommio"
version = "0.1.0"
edition = "2024"

[dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami  = { path = "../../ohkami", default-features = false, features = ["rt_glommio"] }
glommio = "0.9"

[features]
DEBUG = ["ohkami/DEBUG"]