[package]
name    = "petstore"
version = "0.1.0"
edition = "2024"

[dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami  = { path = "../../ohkami", default-features = false, features = ["rt_tokio", "openapi"] }
tokio   = { version = "1", features = ["full"] }

[features]
DEBUG = ["ohkami/DEBUG"]