[package]
name    = "worker-bindings-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# set `default-features = false` to assure "DEBUG" feature be off even when DEBUGing `../ohkami`
ohkami = { path = "../../ohkami", default-features = false, features = ["rt_worker"] }
worker = { version = "0.5", features = ["queue", "d1"] }
console_error_panic_hook = "0.1"
